# teave

./: .clang-format  .gitignore  COPYING.txt  NOTICE.txt  README.md  THIRD-PARTY-LICENSES.txt  TRADEMARKS.txt  Teave_Public_License.txt
licenses/: Teave_Public_License.txt
note/: notes.md
teave/: CMakeLists.txt  common.cpp  common.h  compile_check.cpp
teave-sv/: CMakeLists.txt  README.md  main.cpp  teave-sv.service
teave-sv/dev/: CMakeLists.txt  dev.cpp  dev.h
teave-sv/mgr/: CMakeLists.txt  mgr.cpp  mgr.h
teave/compositor/: CMakeLists.txt  compositor.cpp  compositor.h
teave/debug/: CMakeLists.txt  README.txt  debug.cpp  debug.h
teave/device/: CMakeLists.txt  udev.cpp  udev.h
teave/epoll/: CMakeLists.txt  epoll_mgr.cpp  epoll_mgr.h
teave/err/: CMakeLists.txt  err.cpp  err.h  exceptions.h
teave/event/: CMakeLists.txt  ev_mgr.cpp  ev_mgr.h  event.cpp  event.h  signal_handler.cpp  signal_handler.h
teave/gdev/: CMakeLists.txt  README.md  drm.cpp  drm.h  gdev.cpp  gdev.h  gdev_helpers.cpp  gdev_helpers.h  gdev_mgr.cpp  gdev_mgr.h
teave/gl/: CMakeLists.txt  egl_fncs.cpp  egl_fncs.h  gl_include.h  gl_mgr.cpp  gl_mgr.h  gl_util.cpp  gl_util.h
teave/include/: .clang-format
teave/include/boost/container/: small_vector.hpp
teave/include/boost/container/detail/: config_begin.hpp
teave/include/boost/filesystem/: operations.hpp
teave/include/boost/move/: unique_ptr.hpp
teave/include/boost/stacktrace/detail/: frame_msvc.ipp
teave/include/glm/detail/: _fixes.hpp  setup.hpp
teave/include/glm/simd/: platform.h
teave/include/stb_image/: stb_image.h
teave/logger/: CMakeLists.txt  logger.cpp  logger.h  logger_common.h
teave/runtime/: CMakeLists.txt  runtime.cpp  runtime.h
teave/setting/: CMakeLists.txt  prepro.cpp  prepro.h  setting_common.h  setting_int.h  setting_util.cpp  setting_util.h  settings.cpp  settings.h
teave/socket/: CMakeLists.txt  socket.cpp  socket.h
teave/sv/: CMakeLists.txt  README.md  msg.cpp  msg.h  sv.cpp  sv.h  sva.cpp  sva.h  svs.cpp  svs.h  util.cpp  util.h
teave/test/: CMakeLists.txt  fixture.cpp  fixture.h  util.cpp  util.h
teave/tty/: CMakeLists.txt  tty.cpp  tty.h  vt_fncs.cpp  vt_fncs.h
teave/user/: CMakeLists.txt  user.cpp  user.h
teave/util/: CMakeLists.txt  file.cpp  file.h  time.cpp  time.h  ui.cpp  ui.h  util.cpp  util.h  uuid_gen.cpp  uuid_gen.h
test/: CMakeLists.txt  README.md  catch2_main.cpp  test_setting_util.cpp
